<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPosterMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/movie_poster_selected"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_movie_placeholder"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvMovieTitleDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPosterMovieDetails"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Birds of Prey (and the Fantabulous Emancipation of One Harley Quinn)" />

    <TextView
        android:id="@+id/tvReleaseDateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMovieTitleDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp"
        tools:text="05 February 2020" />


    <LinearLayout
        android:id="@+id/overviewSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvReleaseDateDetails"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvOverviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Overview" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:maxLines="5"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp"
            tools:text="Harley Quinn joins forces with a singer,ashgdashjgvdjhasbdsaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddhjbasjhdgashgdasdhjgashgdsgdjaghsjhsdghasgdjhsgadhasjdgsahdghasjgdagdasfhasfjash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLabelGender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tvLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:textColor="@android:color/black"
                    tools:text="Action" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLabelGender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tvLabel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:textColor="@android:color/black"
                    tools:text="Crime" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/overviewSection"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconAddToWishList"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:contentDescription="@string/add_to_wishlist_icon_description"
            android:src="@drawable/ic_add"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/iconRemoveFromWishList"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:contentDescription="@string/add_to_wishlist_icon_description"
            android:src="@drawable/ic_remove"
            android:visibility="gone"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvWishlistStatusDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/wishlist_status_text"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>